<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Event Planner</string>
    <string name="events">Events</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_event">Add Event</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="even_planner">Personal Event Planner</string>
    <string name="time">Time</string>

    <string-array name="categories">
        <item>Work</item>
        <item>Social</item>
        <item>Travel</item>
        <item>Personal</item>
        <item>Other</item>
    </string-array>

</resources>